Get a basic angular app + table view working

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -348,6 +348,6 @@ db {
   # https://www.playframework.com/documentation/latest/Highlights25#Logging-SQL-statements
   #default.logSql=true
 }
-
+play.application.loader = "wiring.AppLoader"
 include file("/etc/gu/memsub-promotions-keys.conf")
 
