--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,17 +3,19 @@
   "author": "Memsubity team",
   "version": "1.0.0",
   "private": true,
-
   "dependencies": {
     "babel-core": "^6.7.7",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
     "grunt": "^1.0.1",
+    "text-loader": "0.0.1",
     "webpack": "^1.13.0"
   },
-
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "compile": "./node_modules/webpack/bin/webpack.js --config Webpack.js --display-error-details"
+  },
+  "devDependencies": {
+    "ng-annotate-loader": "^0.1.0"
   }
 }
