--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "js": "./node_modules/webpack/bin/webpack.js --config Webpack.js --display-error-details",
+    "js": "./node_modules/webpack/bin/webpack.js --config Webpack.js --display-error-details --bail",
     "sass": "./node_modules/node-sass/bin/node-sass sass/main.sass ../public/stylesheets/main.css",
     "compile": "npm run js && npm run sass"
   },
