--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "angular-route": "^1.5.5",
     "angular-sanitize": "^1.5.5",
     "angular-ui-router": "^0.3.0",
+    "angular-uuid": "0.0.2",
     "babel-core": "^6.7.7",
     "babel-loader": "^6.2.4",
     "babel-polyfill": "^6.8.0",
