--- a/conf/logger.conf
+++ b/conf/logger.conf
@@ -3,6 +3,6 @@ state_file = /var/awslogs/agent-state
 
 [/membership/logs/frontend.log]
 file = /membership/logs/memsub-promotions.log
-log_group_name = FrontendLogs-__STAGE
+log_group_name = MemsubPromotions-__STAGE
 log_stream_name = __DATE/__BUILD/{instance_id}/memsub-promotions.log
 datetime_format = %Y-%m-%d %H:%M-%S
