--- a/conf/application.conf
+++ b/conf/application.conf
@@ -50,12 +50,12 @@ touchpoint.backend.environments {
   }
   PROD {
     voucher {
-      everydayplus=""
-      everyday=""
-      sixdayplus=""
-      sixday=""
-      weekendplus=""
-      weekend=""
+      everydayplus="2c92a0ff56fe33f50157040bbdcf3ae4"
+      everyday="2c92a0fd56fe270b0157040dd79b35da"
+      sixdayplus="2c92a0fc56fe26ba0157040c5ea17f6a"
+      sixday="2c92a0fd56fe270b0157040e42e536ef"
+      weekendplus="2c92a0fd56fe26b60157040cdd323f76"
+      weekend="2c92a0ff56fe33f00157040f9a537f4b"
     }
     delivery {
       everydayplus="2c92a0fd560d132301560e43cf041a3c"
