Updated to latest membership common so that I could leverage the new CampaignGroup and expand the number of filters for the campaigns. This means the business can have a view of Newspaper and Guardian Weekly promotions separate to just Digital Pack and Membership. There was a lot of collateral renaming .product to .campaignGroup. A few UI tweaks for fonts and icons. Still want to have a 'check all' button for Rate Plans and Countries, but will roll that into the next phase. Still need to add correct rate plan IDs for Guardian Weekly.

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -16,10 +16,11 @@ touchpoint.backend.environments {
     voucher {
       everydayplus=""
       everyday="2c92c0f9555cf10501556e84a70440e2"
-      sixdayplus=""
+      sixdayplus="2c92c0f855c3b8190155c585a95e6f5a"
       sixday="2c92c0f8555ce5cf01556e7f01771b8a"
       weekendplus=""
       weekend="2c92c0f8555ce5cf01556e7f01b81b94"
+      sundayplus="2c92c0f955a0b5bf0155b62623846fc8"
     }
     delivery {
       everydayplus=""
@@ -28,6 +29,7 @@ touchpoint.backend.environments {
       sixday="2c92c0f955c3cf0f0155c5d9ddf13bc5"
       weekendplus=""
       weekend="2c92c0f955c3cf0f0155c5d9df433bf7"
+      sundayplus="2c92c0f955c3cf0f0155c5d9e83a3cb7"
     }
   }
   UAT {
@@ -38,14 +40,16 @@ touchpoint.backend.environments {
       sixday="2c92c0f955ca02910155da254a641fb3"
       weekendplus="2c92c0f855c9f4b20155d9f1dd0651ab"
       weekend="2c92c0f855c9f4b20155d9f1db9b5199"
+      sundayplus="2c92c0f855c9f4b20155d9f1cc69508a"
     }
     delivery {
       everydayplus="2c92c0f955ca02900155da2803b02e33"
       everyday="2c92c0f955ca02900155da27f55b2d5f"
-      sixdayplus="2c92c0f955ca02900155da27f4872d4d"
+      sixdayplus="2c92c0f955ca02900155da27f29e2d13"
       sixday="2c92c0f955ca02900155da27ff142e01"
       weekendplus="2c92c0f955ca02900155da27f9402dad"
       weekend="2c92c0f955ca02900155da27f83c2d9b"
+      sundayplus="2c92c0f955ca02900155da27f4872d4d"
     }
   }
   PROD {
@@ -56,6 +60,7 @@ touchpoint.backend.environments {
       sixday="2c92a0fd56fe270b0157040e42e536ef"
       weekendplus="2c92a0fd56fe26b60157040cdd323f76"
       weekend="2c92a0ff56fe33f00157040f9a537f4b"
+      sundayplus="2c92a0fe56fe33ff0157040d4b824168"
     }
     delivery {
       everydayplus="2c92a0fd560d132301560e43cf041a3c"
@@ -64,6 +69,7 @@ touchpoint.backend.environments {
       sixday="2c92a0ff560d311b0156136f2afe5315"
       weekendplus="2c92a0ff560d311b0156136b9f5c3968"
       weekend="2c92a0fd5614305c01561dc88f3275be"
+      sundayplus="2c92a0fd560d13880156136b8e490f8b"
     }
   }
 }
