Add weekly rate plans

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -31,6 +31,17 @@ touchpoint.backend.environments {
       weekend="2c92c0f955c3cf0f0155c5d9df433bf7"
       sundayplus="2c92c0f955c3cf0f0155c5d9e83a3cb7"
     }
+    weekly {
+      zoneA {
+        yearly="2c92c0f8574654af015747f934cc4a04"
+        quarterly="2c92c0f9574ee3d80157514ee1c36a8e"
+      }
+      zoneB {
+        yearly="2c92c0f8574ebcdf015751506d7154ae"
+        quarterly="2c92c0f8574ebcdf015751506daf54c4"
+      }
+    }
+
   }
   UAT {
     voucher {
@@ -51,6 +62,17 @@ touchpoint.backend.environments {
       weekend="2c92c0f955ca02900155da27f83c2d9b"
       sundayplus="2c92c0f955ca02900155da27f4872d4d"
     }
+    weekly {
+      zoneA {
+        yearly="2c92c0f8574654af015747f934cc4a04"
+        quarterly="2c92c0f9574ee3d80157514ee1c36a8e"
+      }
+      zoneB {
+        yearly="2c92c0f8574ebcdf015751506d7154ae"
+        quarterly="2c92c0f8574ebcdf015751506daf54c4"
+      }
+    }
+
   }
   PROD {
     voucher {
@@ -70,6 +92,16 @@ touchpoint.backend.environments {
       weekendplus="2c92a0ff560d311b0156136b9f5c3968"
       weekend="2c92a0fd5614305c01561dc88f3275be"
       sundayplus="2c92a0fd560d13880156136b8e490f8b"
+    }
+    weekly {
+      zoneA {
+        yearly="2c92a0ff57d0a0b60157d741e722439a"
+        quarterly="2c92a0fd57d0a9870157d7412f19424f"
+      }
+      zoneB {
+        yearly="2c92a0fe57d0a0c40157d74240de5543"
+        quarterly="2c92a0fe57d0a0c40157d74241005544"
+      }
     }
   }
 }
