--- a/conf/application.conf
+++ b/conf/application.conf
@@ -33,12 +33,19 @@ touchpoint.backend.environments {
     }
     weekly {
       zoneA {
-        yearly="2c92c0f8574654af015747f934cc4a04"
-        quarterly="2c92c0f9574ee3d80157514ee1c36a8e"
+        yearly="2c92c0f8574b2b8101574c4a9480068d"
+        quarterly="2c92c0f8574b2b8101574c4a957706be"
+        oneyear="2c92c0f958aa455e0158aa6bc72f2aba"
       }
       zoneB {
-        yearly="2c92c0f8574ebcdf015751506d7154ae"
-        quarterly="2c92c0f8574ebcdf015751506daf54c4"
+        yearly="2c92c0f8574b2be601574c39888d6850"
+        quarterly="2c92c0f8574b2be601574c323ca15c7e"
+        oneyear="2c92c0f858aa38af0158b0f0610721d0"
+      }
+      zoneC {
+        yearly="2c92c0f858aa38af0158da325d2f0b3d"
+        quarterly="2c92c0f858aa38af0158da325cec0b2e"
+        oneyear="2c92c0f858aa38af0158da325d790b4b"
       }
     }
 
@@ -66,11 +73,19 @@ touchpoint.backend.environments {
       zoneA {
         yearly="2c92c0f8574654af015747f934cc4a04"
         quarterly="2c92c0f9574ee3d80157514ee1c36a8e"
+        oneyear="2c92c0f858aa38ab0158ac0204ce2b56"
       }
       zoneB {
         yearly="2c92c0f8574ebcdf015751506d7154ae"
         quarterly="2c92c0f8574ebcdf015751506daf54c4"
+        oneyear="2c92c0f9585841e7015862c9128e153b"
       }
+      zoneC {
+        yearly="2c92c0f958aa45650158da23e5eb29d8"
+        quarterly="2c92c0f958aa45650158da23e5ab29c9"
+        oneyear="2c92c0f958aa45650158da23e62d29e7"
+      }
+
     }
 
   }
@@ -97,10 +112,17 @@ touchpoint.backend.environments {
       zoneA {
         yearly="2c92a0ff57d0a0b60157d741e722439a"
         quarterly="2c92a0fd57d0a9870157d7412f19424f"
+        oneyear="2c92a0ff58bdf4eb0158f2ecc89c1034"
       }
       zoneB {
         yearly="2c92a0fe57d0a0c40157d74240de5543"
         quarterly="2c92a0fe57d0a0c40157d74241005544"
+        oneyear="2c92a0fd58cf57000158f30ae6d06f2a"
+      }
+      zoneC {
+        oneyear="2c92a0ff58bdf4ee0158f30905e82181"
+        yearly="2c92a0ff58bdf4eb0158f307eccf02af"
+        quarterly="2c92a0ff58bdf4eb0158f307ed0e02be"
       }
     }
   }
