--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,27 +12,27 @@
     "dev": "npm run js-dev && npm run sass"
   },
   "devDependencies": {
-    "angular": "^1.5.5",
-    "angular-animate": "^1.5.5",
-    "angular-aria": "^1.5.5",
-    "angular-cookies": "^1.5.5",
-    "angular-i18n": "^1.5.5",
-    "angular-material": "^1.0.8",
-    "angular-messages": "^1.5.5",
-    "angular-mocks": "^1.5.5",
-    "angular-route": "^1.5.5",
-    "angular-sanitize": "^1.5.5",
-    "angular-ui-router": "^0.3.0",
+    "angular": "1.5.5",
+    "angular-animate": "1.5.5",
+    "angular-aria": "1.5.5",
+    "angular-cookies": "1.5.5",
+    "angular-i18n": "1.5.5",
+    "angular-material": "1.0.8",
+    "angular-messages": "1.5.5",
+    "angular-mocks": "1.5.5",
+    "angular-route": "1.5.5",
+    "angular-sanitize": "1.5.5",
+    "angular-ui-router": "0.3.0",
     "angular-uuid": "0.0.2",
-    "babel-core": "^6.7.7",
-    "babel-loader": "^6.2.4",
-    "babel-polyfill": "^6.8.0",
-    "babel-preset-es2015": "^6.6.0",
-    "grunt": "^1.0.1",
-    "material-design-lite": "^1.1.3",
-    "ng-annotate-loader": "^0.1.0",
-    "node-sass": "^3.7.0",
+    "babel-core": "6.20.0",
+    "babel-loader": "6.2.4",
+    "babel-polyfill": "6.8.0",
+    "babel-preset-es2015": "6.6.0",
+    "grunt": "1.0.1",
+    "material-design-lite": "1.1.3",
+    "ng-annotate-loader": "0.1.0",
+    "node-sass": "3.7.0",
     "text-loader": "0.0.1",
-    "webpack": "^1.13.0"
+    "webpack": "1.13.0"
   }
 }
