--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "js": "./node_modules/webpack/bin/webpack.js -d --optimize-minimize --optimize-dedup --config Webpack.js --display-error-details --bail",
     "js-dev": "./node_modules/webpack/bin/webpack.js --config Webpack.js --display-error-details --bail",
-    "sass": "./node_modules/node-sass/bin/node-sass sass/main.sass ../public/stylesheets/main.css",
+    "sass": "./node_modules/node-sass/bin/node-sass scss/main.scss ../public/stylesheets/main.css",
     "compile": "npm run js && npm run sass",
     "dev": "npm run js-dev && npm run sass"
   },
