Six for six landing page.
six for six

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -36,6 +36,7 @@ touchpoint.backend.environments {
         yearly="2c92c0f8574b2b8101574c4a9480068d"
         quarterly="2c92c0f8574b2b8101574c4a957706be"
         oneyear="2c92c0f958aa455e0158aa6bc72f2aba"
+        six="2c92c0f85a2190ae015a22bbb6194518"
       }
       zoneB {
         yearly="2c92c0f8574b2be601574c39888d6850"
@@ -46,6 +47,7 @@ touchpoint.backend.environments {
         yearly="2c92c0f858aa38af0158da325d2f0b3d"
         quarterly="2c92c0f858aa38af0158da325cec0b2e"
         oneyear="2c92c0f858aa38af0158da325d790b4b"
+        six="2c92c0f95a246217015a388eaa8c2e2d"
       }
     }
 
@@ -74,6 +76,7 @@ touchpoint.backend.environments {
         yearly="2c92c0f8574654af015747f934cc4a04"
         quarterly="2c92c0f9574ee3d80157514ee1c36a8e"
         oneyear="2c92c0f858aa38ab0158ac0204ce2b56"
+        six="2c92c0f95a246220015a3d680fe1680d"
       }
       zoneB {
         yearly="2c92c0f8574ebcdf015751506d7154ae"
@@ -84,6 +87,7 @@ touchpoint.backend.environments {
         yearly="2c92c0f958aa45650158da23e5eb29d8"
         quarterly="2c92c0f958aa45650158da23e5ab29c9"
         oneyear="2c92c0f958aa45650158da23e62d29e7"
+        six="2c92c0f95a24621b015a3d6ce9e32057"
       }
 
     }
@@ -113,6 +117,7 @@ touchpoint.backend.environments {
         yearly="2c92a0ff57d0a0b60157d741e722439a"
         quarterly="2c92a0fd57d0a9870157d7412f19424f"
         oneyear="2c92a0ff58bdf4eb0158f2ecc89c1034"
+        six="2c92a0ff59d9d540015a41a40b3e07d3"
       }
       zoneB {
         yearly="2c92a0fe57d0a0c40157d74240de5543"
@@ -123,6 +128,7 @@ touchpoint.backend.environments {
         oneyear="2c92a0ff58bdf4ee0158f30905e82181"
         yearly="2c92a0ff58bdf4eb0158f307eccf02af"
         quarterly="2c92a0ff58bdf4eb0158f307ed0e02be"
+        six="2c92a0fc5a2a49f0015a41f473da233a"
       }
     }
   }
