Added a Sunday only package. Simply a clone of the Sunday+ with the Digital Pack charge, and the tax removed.

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -14,22 +14,24 @@ play.http {
 touchpoint.backend.environments {
   DEV {
     voucher {
-      everydayplus=""
+      everydayplus="2c92c0f95aff3b53015b10469bbf5f5f"
       everyday="2c92c0f9555cf10501556e84a70440e2"
       sixdayplus="2c92c0f855c3b8190155c585a95e6f5a"
       sixday="2c92c0f8555ce5cf01556e7f01771b8a"
-      weekendplus=""
+      weekendplus="2c92c0f95aff3b54015b1047efaa2ac3"
       weekend="2c92c0f8555ce5cf01556e7f01b81b94"
       sundayplus="2c92c0f955a0b5bf0155b62623846fc8"
+      sunday="2c92c0f95aff3b56015b1045fb9332d2"
     }
     delivery {
-      everydayplus=""
+      everydayplus="2c92c0f85aff3453015b10496b5e3d17"
       everyday="2c92c0f955c3cf0f0155c5d9e2493c43"
-      sixdayplus=""
+      sixdayplus="2c92c0f85aff33ff015b1042d4ba0a05"
       sixday="2c92c0f955c3cf0f0155c5d9ddf13bc5"
-      weekendplus=""
+      weekendplus="2c92c0f95aff3b56015b104aa9a13ea5"
       weekend="2c92c0f955c3cf0f0155c5d9df433bf7"
       sundayplus="2c92c0f955c3cf0f0155c5d9e83a3cb7"
+      sunday="2c92c0f85aff3453015b1041dfd2317f"
     }
     weekly {
       zoneA {
@@ -61,6 +63,7 @@ touchpoint.backend.environments {
       weekendplus="2c92c0f855c9f4b20155d9f1dd0651ab"
       weekend="2c92c0f855c9f4b20155d9f1db9b5199"
       sundayplus="2c92c0f855c9f4b20155d9f1cc69508a"
+      sunday="2c92c0f95aff3b54015b0ee0eb500b2e"
     }
     delivery {
       everydayplus="2c92c0f955ca02900155da2803b02e33"
@@ -70,6 +73,7 @@ touchpoint.backend.environments {
       weekendplus="2c92c0f955ca02900155da27f9402dad"
       weekend="2c92c0f955ca02900155da27f83c2d9b"
       sundayplus="2c92c0f955ca02900155da27f4872d4d"
+      sunday="2c92c0f95aff3b54015b0ede33bc04f2"
     }
     weekly {
       zoneA {
@@ -102,6 +106,7 @@ touchpoint.backend.environments {
       weekendplus="2c92a0fd56fe26b60157040cdd323f76"
       weekend="2c92a0ff56fe33f00157040f9a537f4b"
       sundayplus="2c92a0fe56fe33ff0157040d4b824168"
+      sunday="2c92a0fe5af9a6b9015b0fe1ecc0116c"
     }
     delivery {
       everydayplus="2c92a0fd560d132301560e43cf041a3c"
@@ -111,6 +116,7 @@ touchpoint.backend.environments {
       weekendplus="2c92a0ff560d311b0156136b9f5c3968"
       weekend="2c92a0fd5614305c01561dc88f3275be"
       sundayplus="2c92a0fd560d13880156136b8e490f8b"
+      sunday="2c92a0ff5af9b657015b0fea5b653f81"
     }
     weekly {
       zoneA {
