updated cloudformation, logging config, added ami update to deploy.json

--- a/conf/logger.conf
+++ b/conf/logger.conf
@@ -1,8 +1,8 @@
 [general]
 state_file = /var/awslogs/agent-state
 
-[/membership/logs/frontend.log]
-file = /membership/logs/memsub-promotions.log
+[memsub-promotions]
+file = var/log/memsub-promotions/memsub-promotions.log
 log_group_name = MemsubPromotions-__STAGE
 log_stream_name = __DATE/__BUILD/{instance_id}/memsub-promotions.log
 datetime_format = %Y-%m-%d %H:%M-%S
