Correct structure for generated artifact (#104)
* app name in build.sbt now used for the artifact so I'm changing it to be 'promotions-tool'

* jk let's call it memsub-promotions

* missed a reference to promotions-tool that should be memsub-promotions

* missed yet another reference to promotions-tool that should be memsub-promotions

* jk let's call it promotions-tool

* update logback configuration to call logfile promotions-tool.log

* chown to the right user in the launch configuration

--- a/conf/logger.conf
+++ b/conf/logger.conf
@@ -1,8 +1,8 @@
 [general]
 state_file = /var/awslogs/agent-state
 
-[memsub-promotions]
-file = var/log/memsub-promotions/memsub-promotions.log
+[promotions-tool]
+file = /var/log/promotions-tool/promotions-tool.log
 log_group_name = MemsubPromotions-__STAGE
 log_stream_name = __DATE/__BUILD/{instance_id}/memsub-promotions.log
 datetime_format = %Y-%m-%d %H:%M-%S
