--- a/cloudformation/memsub-promotions-cf.yaml
+++ b/cloudformation/memsub-promotions-cf.yaml
@@ -147,6 +147,12 @@ Resources:
             - dynamodb:BatchWriteItem
             - dynamodb:Scan
             Resource: !FindInMap [StageVariables, !Ref 'Stage', DynamoDBTableViews]
+          - Effect: Allow
+            Action:
+            - s3:PutObject
+            - s3:PutObjectAcl
+            Resource:
+            - arn:aws:s3:::ophan-raw-membership-promo-code-view/*
   PromoCodeViewLambdaFunctionUAT:
     Condition: CreateProdResources
     Type: AWS::Lambda::Function
