--- a/lambdas/riff-raff.yaml
+++ b/lambdas/riff-raff.yaml
@@ -3,11 +3,12 @@ stacks:
 regions:
 - eu-west-1
 deployments:
-  MembershipSub-Promotions-to-PromoCode-View-Lambda:
+  MembershipSub-Promotions-PromoCode-View:
     type: aws-lambda
     parameters:
-      fileName: MembershipSub-Promotions-to-PromoCode-View-Lambda.zip
+      fileName: MembershipSub-Promotions-PromoCode-View.zip
       prefixStack: false
       bucket: gu-promotions-tool-dist
       functionNames:
       - MembershipSub-Promotions-to-PromoCode-View-
+      - MembershipSub-PromoCode-View-Dynamo-to-Data-Lake-
