Updates to add new fields to the PromoCode-View table and backfill it.

--- a/cloudformation/memsub-promotions-cf.yaml
+++ b/cloudformation/memsub-promotions-cf.yaml
@@ -145,6 +145,7 @@ Resources:
           - Effect: Allow
             Action:
             - dynamodb:BatchWriteItem
+            - dynamodb:PutItem
             - dynamodb:Scan
             Resource: !FindInMap [StageVariables, !Ref 'Stage', DynamoDBTableViews]
           - Effect: Allow
