Add Saturday product

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -22,6 +22,8 @@ touchpoint.backend.environments {
       weekend="2c92c0f8555ce5cf01556e7f01b81b94"
       sundayplus="2c92c0f955a0b5bf0155b62623846fc8"
       sunday="2c92c0f95aff3b56015b1045fb9332d2"
+      saturdayplus="2c92c0f961f9cf300161fc44f2661258"
+      saturday="2c92c0f861f9c26d0161fc434bfe004c"
     }
     delivery {
       everydayplus="2c92c0f85aff3453015b10496b5e3d17"
@@ -32,6 +34,8 @@ touchpoint.backend.environments {
       weekend="2c92c0f955c3cf0f0155c5d9df433bf7"
       sundayplus="2c92c0f955c3cf0f0155c5d9e83a3cb7"
       sunday="2c92c0f85aff3453015b1041dfd2317f"
+      saturdayplus="2c92c0f961f9cf300161fc4f71473a34"
+      saturday="2c92c0f961f9cf300161fc4d2e3e3664"
     }
     weekly {
       zoneA {
@@ -64,6 +68,8 @@ touchpoint.backend.environments {
       weekend="2c92c0f855c9f4b20155d9f1db9b5199"
       sundayplus="2c92c0f855c9f4b20155d9f1cc69508a"
       sunday="2c92c0f95aff3b54015b0ee0eb500b2e"
+      saturdayplus="2c92c0f961f9cf350161fc0454283f3e"
+      saturday="2c92c0f961f9cf300161fc02a7d805c9"
     }
     delivery {
       everydayplus="2c92c0f955ca02900155da2803b02e33"
@@ -74,6 +80,8 @@ touchpoint.backend.environments {
       weekend="2c92c0f955ca02900155da27f83c2d9b"
       sundayplus="2c92c0f955ca02900155da27f4872d4d"
       sunday="2c92c0f95aff3b54015b0ede33bc04f2"
+      saturdayplus="2c92c0f961f9cf300161fbfa943b6f54"
+      saturday="2c92c0f85b8fa30e015b9108a83253c7"
     }
     weekly {
       zoneA {
@@ -107,6 +115,8 @@ touchpoint.backend.environments {
       weekend="2c92a0ff56fe33f00157040f9a537f4b"
       sundayplus="2c92a0fe56fe33ff0157040d4b824168"
       sunday="2c92a0fe5af9a6b9015b0fe1ecc0116c"
+      saturdayplus="2c92a0fd6205707201621fa1350710e3"
+      saturday="2c92a0fd6205707201621f9f6d7e0116"
     }
     delivery {
       everydayplus="2c92a0fd560d132301560e43cf041a3c"
@@ -117,6 +127,8 @@ touchpoint.backend.environments {
       weekend="2c92a0fd5614305c01561dc88f3275be"
       sundayplus="2c92a0fd560d13880156136b8e490f8b"
       sunday="2c92a0ff5af9b657015b0fea5b653f81"
+      saturdayplus="2c92a0ff6205708e01622484bb2c4613"
+      saturday="2c92a0fd5e1dcf0d015e3cb39d0a7ddb"
     }
     weekly {
       zoneA {
