--- a/lambdas/riff-raff.yaml
+++ b/lambdas/riff-raff.yaml
@@ -12,3 +12,4 @@ deployments:
       functionNames:
       - MembershipSub-Promotions-to-PromoCode-View-
       - MembershipSub-PromoCode-View-Dynamo-to-Data-Lake-
+      - MembershipSub-PromoCode-View-Dynamo-to-Salesforce-
